practice-exam-tracker-sfdx/ooo-app/main/default/objects/Week__c/Week__c.object-meta.xml
<CustomObject>
    <label>Week</label>
    <nameField>
        <label>Week Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>