practice-exam-tracker-sfdx/ooo-app/main/default/objects/Week__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Weeks</relationshipLabel>
    <relationshipName>Weeks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>