practice-exam-tracker-sfdx/ooo-app/main/default/objects/Week__c/fields/Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Date__c</fullName>
    <description>Calculates the date of the Monday of the specified number of weeks after the batch start date.</description>
    <formula>( Batch__r.Start_Date__c + ( Week_Number__c * 7 ) ) + ( 1 - MOD( ( Batch__r.Start_Date__c + ( Week_Number__c * 7 ) ) - DATE( 1900, 1, 7 ), 7 ) )
+
IF( 
  MOD( ( Batch__r.Start_Date__c + ( Week_Number__c * 7 ) ) - DATE( 1900, 1, 7 ), 7 ) &gt; 1,
  7,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Start Date</label>
    <type>Date</type>
</CustomField>